web-infras/parser/tests/fixtures/self-added/spread-and-rest/rest-as-id/rest-not-at-end-in-lexical/output.txt
[SyntaxError]: Unexpected trailing comma after rest element. (1,12)
1|const {...d, a} = [];
 |          ^
